crates/bevy_derive/compile_fail/tests/deref_mut_derive/missing_deref_fail.stderr
error[E0277]: the trait bound `TupleStruct: Deref` is not satisfied
  --> tests/deref_mut_derive/missing_deref_fail.rs:LL:CC
   |
LL | struct TupleStruct(usize, #[deref] String);
   |        ^^^^^^^^^^^ the trait `Deref` is not implemented for `TupleStruct`
   |
note: required by a bound in `DerefMut`
  --> RUSTLIB/core/src/ops/deref.rs:LL:CC
   |
LL | pub trait DerefMut: ~const Deref {
   |                     ^^^^^^^^^^^^ required by this bound in `DerefMut`

error[E0277]: the trait bound `TupleStruct: Deref` is not satisfied
  --> tests/deref_mut_derive/missing_deref_fail.rs:LL:CC
   |
LL | #[derive(DerefMut)]
   |          ^^^^^^^^ the trait `Deref` is not implemented for `TupleStruct`
   |
  = note: this error originates in the derive macro `DerefMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Struct: Deref` is not satisfied
  --> tests/deref_mut_derive/missing_deref_fail.rs:LL:CC
   |
LL | struct Struct {
   |        ^^^^^^ the trait `Deref` is not implemented for `Struct`
   |
note: required by a bound in `DerefMut`
  --> RUSTLIB/core/src/ops/deref.rs:LL:CC
   |
LL | pub trait DerefMut: ~const Deref {
   |                     ^^^^^^^^^^^^ required by this bound in `DerefMut`

error[E0277]: the trait bound `Struct: Deref` is not satisfied
  --> tests/deref_mut_derive/missing_deref_fail.rs:LL:CC
   |
LL | #[derive(DerefMut)]
   |          ^^^^^^^^ the trait `Deref` is not implemented for `Struct`
   |
   = note: this error originates in the derive macro `DerefMut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
